logs/civil.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/PyGame'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/civil'...
Listing './lib/python3.5/site-packages/civil/data'...
Listing './lib/python3.5/site-packages/civil/data/fonts'...
Listing './lib/python3.5/site-packages/civil/data/gfx'...
Listing './lib/python3.5/site-packages/civil/data/gfx/dialogs'...
Listing './lib/python3.5/site-packages/civil/data/gfx/dialogs/us-civil'...
Listing './lib/python3.5/site-packages/civil/data/gfx/editor'...
Listing './lib/python3.5/site-packages/civil/data/gfx/mini-terrains'...
Listing './lib/python3.5/site-packages/civil/data/gfx/objects'...
Listing './lib/python3.5/site-packages/civil/data/gfx/periphery'...
Listing './lib/python3.5/site-packages/civil/data/gfx/periphery/us-civil'...
Listing './lib/python3.5/site-packages/civil/data/gfx/pointers'...
Listing './lib/python3.5/site-packages/civil/data/gfx/pointers/setup'...
Listing './lib/python3.5/site-packages/civil/data/gfx/pointers/us-civil'...
Listing './lib/python3.5/site-packages/civil/data/gfx/terrains'...
Listing './lib/python3.5/site-packages/civil/data/gfx/units'...
Listing './lib/python3.5/site-packages/civil/data/gfx/units/us-civil'...
Listing './lib/python3.5/site-packages/civil/data/scenarios'...
Listing './lib/python3.5/site-packages/civil/data/scenarios/schemas'...
Listing './lib/python3.5/site-packages/civil/data/sound'...
Listing './lib/python3.5/site-packages/civil/data/xslt'...
Listing './lib/python3.5/site-packages/civil/data/xslt/CreateMap'...
Listing './lib/python3.5/site-packages/civil/data/xslt/images'...
Listing './lib/python3.5/site-packages/civil/data/xslt/manual2html'...
Listing './lib/python3.5/site-packages/civil/data/xslt/modules'...
Listing './lib/python3.5/site-packages/civil/data/xslt/scenario2html'...
Listing './lib/python3.5/site-packages/civil/editor'...
Listing './lib/python3.5/site-packages/civil/editor/plugins'...
Listing './lib/python3.5/site-packages/civil/lounge'...
Listing './lib/python3.5/site-packages/civil/map'...
Listing './lib/python3.5/site-packages/civil/map/los'...
Listing './lib/python3.5/site-packages/civil/model'...
Listing './lib/python3.5/site-packages/civil/net'...
Listing './lib/python3.5/site-packages/civil/plan'...
Listing './lib/python3.5/site-packages/civil/playfield'...
Listing './lib/python3.5/site-packages/civil/serialization'...
Compiling './lib/python3.5/site-packages/civil/serialization/xmlrpclib.py'...
***   File "./lib/python3.5/site-packages/civil/serialization/xmlrpclib.py", line 212
    True, False = Boolean(1), Boolean()
                                      ^
SyntaxError: can't assign to keyword

Listing './lib/python3.5/site-packages/civil/server'...
Listing './lib/python3.5/site-packages/civil/server/action'...
Listing './lib/python3.5/site-packages/civil/server/ai'...
Listing './lib/python3.5/site-packages/civil/server/engine'...
Listing './lib/python3.5/site-packages/civil/server/engine/ai'...
Listing './lib/python3.5/site-packages/civil/server/engine/executor'...
Listing './lib/python3.5/site-packages/civil/server/mode'...
Listing './lib/python3.5/site-packages/civil/state'...
Listing './lib/python3.5/site-packages/civil/ui'...
Listing './lib/python3.5/site-packages/civil/util'...
Listing './lib/python3.5/site-packages/civil-0.84.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygame'...
Listing './lib/python3.5/site-packages/pygame/.libs'...
Listing './lib/python3.5/site-packages/pygame/docs'...
Listing './lib/python3.5/site-packages/pygame/docs/ref'...
Listing './lib/python3.5/site-packages/pygame/examples'...
Listing './lib/python3.5/site-packages/pygame/examples/data'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj'...
Listing './lib/python3.5/site-packages/pygame/examples/macosx/aliens_app_example/English.lproj/MainMenu.nib'...
Listing './lib/python3.5/site-packages/pygame/gp2x'...
Listing './lib/python3.5/site-packages/pygame/tests'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/fonts'...
Listing './lib/python3.5/site-packages/pygame/tests/fixtures/xbm_cursors'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/all_ok'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/everything'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/exclude'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/failures1'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/incomplete_todo'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/infinite_loop'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stderr'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/print_stdout'...
Listing './lib/python3.5/site-packages/pygame/tests/run_tests__tests/timeout'...
Listing './lib/python3.5/site-packages/pygame/tests/test_utils'...
Listing './lib/python3.5/site-packages/pygame/threads'...
Listing './lib/python3.5/site-packages/pygame-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
